--- a/iot/iot-fog/docker-compose.yml
+++ b/iot/iot-fog/docker-compose.yml
@@ -15,6 +15,10 @@ services:
       - EMQX_API_BASE=http://emqx:8081/api/v4
       - EMQX_MANAGEMENT__DEFAULT_APPLICATION__USERNAME=admin
       - EMQX_MANAGEMENT__DEFAULT_APPLICATION__PASSWORD=admin123..
+      - INFLUX_ADMIN_TOKEN=${INFLUX_ADMIN_TOKEN}
+      - INFLUX_URL=http://influxdb:8086
+      - INFLUX_ORG=my-org
+      - INFLUX_BUCKET=measurements
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
 
@@ -30,20 +34,20 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
     networks:
       - red-auth
-  
+
   mongo-express:
     image: mongo-express
     container_name: mongo-express
     restart: always
     ports:
-      - "8082:8082"  
+      - "8082:8082"
     environment:
       ME_CONFIG_MONGODB_SERVER: mongo
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_BASICAUTH_USERNAME: admin
       ME_CONFIG_BASICAUTH_PASSWORD: admin
-    command: ["node", "app", "--port", "8082"]  
+    command: ["node", "app", "--port", "8082"]
     depends_on:
       - mongo
     networks:
